<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            android:layout_marginBottom="25dp">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bienvenida"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            android:gravity="center">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datos"
            android:textSize="15sp"
            android:layout_marginBottom="25dp"
            android:gravity="center">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/lhorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/lhorizontal1"
                android:layout_width="wrap_content"
                android:layout_height="51dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/border_spinner"
                tools:ignore="UselessParent">

                <Spinner
                    android:id="@+id/spinner_identidad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:overlapAnchor="true"
                    android:spinnerMode="dropdown"
                    android:textAlignment="viewEnd"
                    android:textSize="19dp"
                    android:theme="@style/MatchSpinnerTheme"/>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_DocumentoIdentidad"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:hint="@string/et_cedula"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDocumentoIdentidad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:inputType="number"
                    android:textSize="19dp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lhorizontal2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:id="@+id/lhorizontal3"
                android:layout_width="wrap_content"
                android:layout_height="51dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/border_spinner"
                tools:ignore="UselessParent">

                <Spinner
                    android:id="@+id/spinner_telf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:spinnerMode="dropdown"
                    android:textAlignment="viewEnd"
                    android:textSize="19dp"
                    android:theme="@style/MatchSpinnerTheme"/>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_NumeroMovil"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:hint="@string/et_telefono"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNumeroMovil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textSize="19dp"
                    android:autoSizeTextType="uniform"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autoSizeTextType="uniform"
        android:paddingVertical="10dp"
        android:text="@string/btnLogin"
        android:textSize="15sp"
        app:cornerRadius="50dp" />

</LinearLayout>

